# auth-web

./: .gitignore  CMakeLists.txt  README.md  config.ini  config.json
controllers/: api_v1_Auth.cc  api_v1_Auth.h  api_v1_User.cc  api_v1_User.h
files/: create.sql  crete.sql  er.mwb  mongo.js
lib/macos/mariadb/include/mysql/: mariadb_version.h
lib/macos/mariadb/include/mysql/server/: mysql_version.h
lib/macos/mariadb/include/mysql/server/private/: config.h  lex_hash.h  lex_token.h
lib/macos/mariadb/lib/: libmariadb.3.dylib
lib/macos/mariadb/lib/pkgconfig/: libmariadb.pc  mariadb.pc
lib/macos/mariadb/lib/plugin/auth_pam_tool_dir/: auth_pam_tool
lib/macos/mysql-connector/lib/: libmysqlcppconn8.2.8.0.22.dylib  libmysqlcppconn8.2.dylib
lib/macos/openssl/lib/: libcrypto.1.1.dylib  libssl.1.1.dylib
lib/macos/openssl/lib/engines-1.1/: capi.dylib  padlock.dylib
lib/macos/poco/lib/: libPocoCrypto.71.dylib  libPocoCrypto.dylib  libPocoData.71.dylib  libPocoData.dylib  libPocoDataSQLite.71.dylib  libPocoDataSQLite.dylib  libPocoEncodings.71.dylib  libPocoEncodings.dylib  libPocoFoundation.71.dylib  libPocoFoundation.dylib  libPocoJSON.71.dylib  libPocoJSON.dylib  libPocoJWT.71.dylib  libPocoJWT.dylib  libPocoNet.71.dylib  libPocoNet.dylib  libPocoNetSSL.71.dylib  libPocoNetSSL.dylib  libPocoRedis.71.dylib  libPocoRedis.dylib  libPocoUtil.71.dylib  libPocoUtil.dylib  libPocoXML.71.dylib  libPocoXML.dylib  libPocoZip.71.dylib  libPocoZip.dylib
scripts/: crete.sql
src/: application.cpp  application.h  constants.h  globals.cpp  globals.cpp.autosave  globals.h  jwthelper.cpp  jwthelper.h  licence.h  main.cc  main.cpp  router.cc  router.cpp  router.h  utils.cpp  utils.h
src/3thparty/mariadbpp/include/mariadb++/: account.hpp  time.hpp
src/3thparty/mariadbpp/src/: bind.cpp  connection.cpp  date_time.cpp  result_set.cpp  statement.cpp  time.cpp
src/controllers/: Controller.h  authcontroller.cc  authcontroller.cpp  authcontroller.h  domaincontroller.cpp  domaincontroller.h  errorcontroller.cc  errorcontroller.h  httpstatuscontroller.cpp  httpstatuscontroller.h  usercontroller.cpp  usercontroller.h
src/crypto/: aes.cpp  aes.h  bytearray.cpp  bytearray.h
src/dao/: dao.h  daouser.cpp  daouser.h
src/daos/: dao.h  domaindao.cpp  domaindao.h  userdao.cpp  userdao.h
src/helpers/: domainhelper.cpp  domainhelper.h
src/services/: authservice.cpp  authservice.h  domainservice.cpp  domainservice.h  lockservice.cpp  lockservice.h  logservice.cpp  logservice.h  userservice.cpp  userservice.h
static/: index.html
